src/common.h

#define COFFE_MAX_STRLEN 256 // largest allowed length of the filename
typedef struct coffe_class_struct_t
{
    void *file_content,
         *background,
         *thermodynamics,
         *perturb,
         *primordial,
         *nonlinear,
         *transfer,
         *spectra;
} coffe_class_struct_t;
typedef struct coffe_class_precision_parameters_t
{
    double k_per_decade_for_bao;
    double k_per_decade_for_pk;
    double start_large_k_at_tau_h_over_tau_k;
    int l_max_g;
    int l_max_ur;
    double tol_perturb_integration;
    double radiation_streaming_trigger_tau_over_tau_k;
    double ur_fluid_trigger_tau_over_tau_k;
} coffe_class_precision_parameters_t;
typedef struct coffe_fit_coefficients_array_t
{
    coffe_fit_coefficients_t *array;
    size_t size;
} coffe_fit_coefficients_array_t;
/**
    contains the coordinates for the correlation function at (z, r, mu)
**/

typedef struct coffe_corrfunc_coords_t
{
    double z_mean;
    double separation;
    double mu;
} coffe_corrfunc_coords_t;
/**
    same as above for multipoles
**/

typedef struct coffe_multipoles_coords_t
{
    double z_mean;
    double separation;
    int l;
} coffe_multipoles_coords_t;
/**
    -||- for covariance of multipoles
**/

typedef struct coffe_covariance_coords_t
{
    int l1, l2;
    double separation1, separation2;
    double z_mean;
} coffe_covariance_coords_t;
/**
    simple wrapper with failsafe for malloc
**/

void *coffe_malloc(size_t size);
/**
    wrapper for 1D GSL interpolation structure
**/

typedef struct coffe_interpolation
{
    gsl_spline *spline;
    gsl_interp_accel *accel;
} coffe_interpolation;
/**
    wrapper for 2D GSL interpolation structure
**/

typedef struct coffe_interpolation2d
{
    gsl_spline2d *spline;
    gsl_interp_accel *xaccel;
    gsl_interp_accel *yaccel;
} coffe_interpolation2d;
/**
    simple enum to specify which correlation terms we need to compute
**/

enum coffe_integral_type
{
    NONINTEGRATED, SINGLE_INTEGRATED, DOUBLE_INTEGRATED
};
/**
    same as above, but for specifing the output type
**/

enum coffe_output_type
{
    CORRFUNC = 1,
    MULTIPOLES = 2,
    AVERAGE_MULTIPOLES = 3,
    COVARIANCE_MULTIPOLES = 4,
    COVARIANCE_AVERAGE_MULTIPOLES = 5
};
enum coffe_interp1d_type
{
    COFFE_INTERP_LINEAR = 1,
    COFFE_INTERP_POLYNOMIAL = 2,
    COFFE_INTERP_CSPLINE = 3,
    COFFE_INTERP_CSPLINE_PERIODIC = 4,
    COFFE_INTERP_AKIMA = 5,
    COFFE_INTERP_AKIMA_PERIODIC = 6,
    COFFE_INTERP_STEFFEN = 7
};
enum coffe_interp2d_type
{
    COFFE_INTERP2D_BILINEAR = 1,
    COFFE_INTERP2D_BICUBIC = 2
};
enum coffe_pk_type
{
    COFFE_PK_LINEAR = 0,
    COFFE_PK_LINEAR_CLASS = 1,
    COFFE_PK_NONLINEAR_HALOFIT = 2,
    COFFE_PK_NONLINEAR_HMCODE = 3
};
enum coffe_covariance_integration_method
{
    COFFE_COVARIANCE_INTEGRATION_STANDARD = 1,
    COFFE_COVARIANCE_INTEGRATION_FFTLOG = 2
};
enum coffe_integration_1d_type
{
    COFFE_INTEGRATION_GSL = 1,
    COFFE_INTEGRATION_DOUBLE_EXPONENTIAL = 2
};
/**
    structure with all of the correlation contributions
**/

typedef struct coffe_correlation_contributions
{
    int den, rsd, len, d1, d2, g1, g2, g3, g4, g5;
} coffe_correlation_contributions;
/**
    contains all the parameters necessary to carry
    out the computation
**/

typedef struct coffe_parameters_t
{
    int output_type; /* correlation function (angular or full sky), or multipoles, or redshift averaged multipoles */

    double *mu; /* value for the angles */

    size_t mu_len; /* number of angles */

    coffe_correlation_contributions correlation_contrib; /* all of the correlation contributions (internally) */

    char **type_bg; /* background values to output */

    size_t type_bg_len; /* number of background values */

    int background_bins; /* number of bins for the background */

    int bessel_bins; /* number of bins for the bessel integrals */

    double inv_k_window; /* inverse of the exponential scale for the power spectrum */

    double Omega0_cdm; /* omega parameter for cold dark matter */

    double Omega0_m;

    int b_derivative, f_derivative, b_tilde_derivative, f_tilde_derivative;

    double Omega0_baryon; /* omega parameter for baryons */

    double Omega0_gamma; /* omega parameter for photons */

    double w0; /* parameter for the equation of state of dark energy */

    double wa; /* parameter for the equation of state of dark energy */

    double Omega0_de; /* present omega parameter for dark energy-like component */

    double *z_mean; /* mean redshift */

    size_t z_mean_len;

    double *deltaz;

    size_t deltaz_len;

    double *sep; /* all the separations */

    size_t sep_len; /* number of separations */

    int integration_method;

    int integration_bins;

    int nthreads; /* how many threads are used for the computation */

    char file_power_spectrum[COFFE_MAX_STRLEN]; /* file containing the PS */

    coffe_interpolation power_spectrum;

    coffe_interpolation power_spectrum_norm;

    coffe_interpolation2d power_spectrum2d;

    coffe_interpolation2d power_spectrum2d_norm;

    double k_min; /* min value to be taken from PS file */

    double k_max; /* max value to be taken from PS file */

    double k_min_norm; /* min value to be taken from PS file */

    double k_max_norm; /* max value to be taken from PS file */

    /* different biases */
    int read_galaxy_bias1, read_galaxy_bias2;

    char file_galaxy_bias1[COFFE_MAX_STRLEN], file_galaxy_bias2[COFFE_MAX_STRLEN];

    coffe_interpolation galaxy_bias1, galaxy_bias2, galaxy_bias3, galaxy_bias4;

    int read_magnification_bias1, read_magnification_bias2;

    int galaxy_bias_analytic;

    char file_magnification_bias1[COFFE_MAX_STRLEN], file_magnification_bias2[COFFE_MAX_STRLEN];

    coffe_interpolation magnification_bias1, magnification_bias2;

    int read_evolution_bias1, read_evolution_bias2;

    char file_evolution_bias1[COFFE_MAX_STRLEN], file_evolution_bias2[COFFE_MAX_STRLEN];

    coffe_interpolation evolution_bias1, evolution_bias2;

    int divergent; /* flag for divergent integrals */

    #ifndef COFFE_CYTHON
    config_t *conf; /* contains all the settings */
    #endif

    char timestamp[COFFE_MAX_STRLEN]; /* when the calculation started */

    char output_path[COFFE_MAX_STRLEN]; /* output directory for all the files */

    char output_prefix[COFFE_MAX_STRLEN]; /* output prefix for all the files */

    enum coffe_interp1d_type interp_method; /* method used for interpolation (linear, poly, etc.) */

    int *multipole_values; /* the multipoles to calculate */

    size_t multipole_values_len;

    int has_class;

    int has_cuba;

    double *zmin;

    size_t zmin_len;

    double *zmax;

    size_t zmax_len;

    double *fsky;

    size_t fsky_len;

    double *density1, *density2;

    size_t density1_len, density2_len;

    double *pixelsize;

    size_t pixelsize_len;

    /* the covariance is a 4-point function, hence we can in general
    specify 4 different populations */
    int covariance_pop1, covariance_pop2, covariance_pop3, covariance_pop4;

    /* which contributions should be considered for the covariance (CV-CV, CV-Poisson, and Poisson-Poisson */
    int covariance_cosmic, covariance_mixed, covariance_poisson;

    int covariance_integration_method;

    int covariance_integration_bins;

    enum coffe_interp2d_type covariance_interpolation_method;

    int covariance_window;

    int have_window;

    double window_size;

    /* for redshift averaged multipoles */
    double z_min, z_max;

    int flatsky_local;

    int flatsky_local_nonlocal;

    int flatsky_nonlocal;

    int verbose;

    /* stuff for CLASS only */

    int have_class; /* should CLASS be used or not? */

    double n_s; /* spectral index n_s */

    double sigma8; /* amplitude of primordial power spectrum sigma8 */

    double A_s; /* amplitude of primordial power spectrum A_s */

    double T_cmb, N_ur, m_ncdm, Omega0_nu; /* last one = neutrino energy density fraction */

    double YHe; /* helium fraction */

    int N_ncdm;

    double h; /* Damn you, little h! */

    double k_pivot; /* for CLASS */

    /* in C we can use void for anything that's a pointer */
    coffe_class_struct_t class_struct;

    coffe_class_precision_parameters_t class_precision;

    int flag;

    enum coffe_pk_type pk_type;

    int midpoint_approximation;

    int only_cross_correlations;

    enum coffe_integration_1d_type integration_1d_type;

    double integration_1d_prec;

    coffe_fit_coefficients_array_t galaxy_bias1_coefficients;
    coffe_fit_coefficients_array_t galaxy_bias2_coefficients;
    coffe_fit_coefficients_array_t magnification_bias1_coefficients;
    coffe_fit_coefficients_array_t magnification_bias2_coefficients;
    coffe_fit_coefficients_array_t evolution_bias1_coefficients;
    coffe_fit_coefficients_array_t evolution_bias2_coefficients;

    int degree_galaxy_bias1, degree_galaxy_bias2;
    int degree_magnification_bias1, degree_magnification_bias2;
    int degree_evolution_bias1, degree_evolution_bias2;

} coffe_parameters_t;
int coffe_init_spline(
    coffe_interpolation *interp,
    const double *xi,
    const double *yi,
    const size_t bins,
    const enum coffe_interp1d_type interpolation_type
);
int coffe_init_spline2d(
    coffe_interpolation2d *interp,
    const double *xi,
    const double *yi,
    const double *zi,
    const size_t binsx,
    const size_t binsy,
    const enum coffe_interp2d_type interpolation_type
);
double coffe_interp_spline(
    const coffe_interpolation *interp,
    double value
);
double coffe_interp_spline2d(
    const coffe_interpolation2d *interp,
    const double value1,
    const double value2
);
int coffe_free_spline(
    coffe_interpolation *interp
);
int coffe_free_spline2d(
    coffe_interpolation2d *interp
);
int coffe_parameters_free(
    coffe_parameters_t *par
);
/**
    integrates any 1D function `func` with arbitrary parameters `parameters`
    between `a` and `b`, with relative precision `prec`, and returns `result`,
    using either GSL (top) or double exponential quadrature (bottom)
**/

double coffe_integrate_1d_prec_gsl(
    double (*func)(
        double,
        void*
    ),
    void *parameters,
    const double a,
    const double b,
    const double precision
);
double coffe_integrate_1d_prec_double_exponential(
    double (*func)(
        double,
        void*
    ),
    void *parameters,
    const double a,
    const double b,
    const double precision
);
    int (*func)(
        const int *,
        const cubareal *,
        const int *,
        cubareal *,
        void *
    ),
#else
    double (*func)(
        double *,
        size_t,
        void *
    ),
#endif