src/corrfunc.h

typedef struct coffe_corrfunc_t
{
    coffe_corrfunc_coords_t coords;
    double value;
} coffe_corrfunc_t;
typedef struct coffe_corrfunc_array_t
{
    coffe_corrfunc_t *array;
    size_t size;
} coffe_corrfunc_array_t;
int coffe_corrfunc_init(
    coffe_parameters_t *par,
    coffe_background_t *bg,
    coffe_integral_array_t *integral,
    coffe_corrfunc_array_t *cf
);
int coffe_corrfunc_free(
    coffe_corrfunc_array_t *cf
);